Fixed media queries for vertical spacing of filters on sessions view

--- a/CodeCamper.Web/Content/styles.css
+++ b/CodeCamper.Web/Content/styles.css
@@ -439,6 +439,15 @@ button {
 	body {
 		font-size: 14px;
 	}
+
+    nav label {
+	    margin-bottom: 1%;
+    }
+
+    nav select {
+	    margin-bottom: 1%;
+    }
+
     .accent-top {
         width: 160px;
         height: 20px;
